...
    var enWord by rememberSaveable { mutableStateOf("") }
    var vnWord by rememberSaveable { mutableStateOf("") }
    Column {
        TextField(
            value = enWord,
            onValueChange = { enWord = it },
            modifier = Modifier.semantics { contentDescription = "enTextField" },
            label = { Text(stringResource(R.string.english_label)) }
        )
        TextField(
            value = vnWord,
            onValueChange = { vnWord = it },
            modifier = Modifier.semantics { contentDescription = "vnTextField" },
...
                    onMessageChange("$ex") //equivalent to ex.toString() (no double quotes). more friendly: ex.localizedMessage
                } finally {
                    enWord = ""
                    vnWord = ""
                }
            }
        }, modifier = Modifier.semantics { contentDescription = "add_card_button" })
        { Text("Add") }
    }
}
