...
                    modifier = Modifier.padding(end = 15.dp, start = 10.dp, top = 20.dp)
                ) {
                    if (!isHome) {
                        TextButton(
                            content = { Text(stringResource(R.string.back_button_label)) },
                            onClick = { navController.navigateUp() }, //or popBackStack(), but if click too fast it pop the NavHost
                            modifier = Modifier.semantics { contentDescription = "navigateBack" },
                            border = BorderStroke(width = 1.dp, color = Color.Gray),
                            //colors = androidx.compose.material3.ButtonDefaults.buttonColors(
                            //    containerColor = Color.Transparent,
                            //    contentColor = MaterialTheme.colorScheme.primary,
                            //),
                        )
...
